--- a/Html/KPIManagement.html
+++ b/Html/KPIManagement.html
@@ -13,6 +13,7 @@
     <script src="../js/basic/jquery-latest.js"></script>
     <script src="../js/basic/jquery.cookie.js"></script>
     <script src="../js/basic/jquery.tag-editor.js"></script>
+    <script src="../js/basic/jquery.tag-editor3parments.js"></script>
     <script src="../bootstrap-3.3.5-dist/js/bootstrap.js"></script>
     <script src="../js/basic/basic.js"></script>
     <script src="../js/basic/ajax.js"></script>
@@ -34,6 +35,7 @@
         <li class="IsClick"><a href="#">All</a></li>
         <li><a href="#">Created</a></li>
         <li><a href="#">Followed</a></li>
+        <li><a href="#">User Groups</a></li>
     </ul>
     <button type="button" class="BtnSubmit Create" data-toggle="modal" data-target="#CreateKpi">Create</button>
 </div>
@@ -55,11 +57,11 @@
                     <div class="col-md-4 BasicHeader">
                         <h4>Basic Information</h4>
                     </div>
-                    <div class="col-md-4 AssignToHeader">
-                        <h4>Assign To</h4>
-                    </div>
                     <div class="col-md-4 ViewableHeader">
                         <h4>Viewable</h4>
+                    </div>
+                    <div class="col-md-4 AssignToHeader">
+                        <h4>Assign To</h4>
                     </div>
                 </div>
                 <hr>
@@ -122,6 +124,56 @@
                     </div>
                 </div>
 
+                <div class="viewable" isopen="no">
+                    <div class="row">
+                        <div class="col-md-1"></div>
+                        <div class="input-group col-md-10 ViewMsgShow">
+                             <span class="input-group-addon">
+                                 <input type="radio" value="0" name="ViewType" checked>
+                             </span>
+                            <input type="text" class="form-control" readonly="readonly"
+                                   value="Public              |   Everyone can see it.">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-1"></div>
+                        <div class="input-group col-md-10 ViewMsgShow">
+                             <span class="input-group-addon">
+                                 <input type="radio" value="1" name="ViewType">
+                             </span>
+                            <input type="text" class="form-control" readonly="readonly"
+                                   value="Private         　|   Only you can see it.">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-1"></div>
+                        <div class="input-group col-md-10 ViewMsgShow">
+                             <span class="input-group-addon">
+                                 <input type="radio" value="2" name="ViewType">
+                             </span>
+                            <input type="text" class="form-control" readonly="readonly"
+                                   value="Partial Public   |   Only selected People can see it.">
+
+                            <span class="input-group-addon ShowChoosedGroup"></span>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-1"></div>
+                        <div class="input-group col-md-10 ViewMsgShow">
+                             <span class="input-group-addon">
+                                 <input type="radio" value="3" name="ViewType">
+                             </span>
+                            <input type="text" class="form-control" readonly="readonly"
+                                   value="Block Specific  |   Only selected people cannot see it.">
+                            <span class="input-group-addon ShowNotChoosedGroup" data-toggle="tooltip"
+                                  data-placement="top"></span>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="assign-to" isopen="no">
                     <div class="alert alert-warning alert-dismissible WarningAlert" role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
@@ -176,7 +228,8 @@
 
                         <div class="col-md-3">
                             <div class="CheckBox" style="margin: 5px 0 0 -10px;">
-                                <input type="checkbox" value="true" id="notification" name="check" checked="checked"/>
+                                <input type="checkbox" value="true" id="notification" style="margin: 4px;"
+                                       name="check" checked="checked"/>
                                 <label for="notification" style="margin: 0"></label>
 
                                 <p title="Auto Notification" style="margin: 0" data-toggle="tooltip"
@@ -186,68 +239,12 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="viewable" isopen="no">
-                    <div class="alert alert-warning alert-dismissible WarningAlert" role="alert">
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
-                                aria-hidden="true">&times;</span></button>
-                        <strong>Tips!</strong> You can do it Later.
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-1"></div>
-                        <div class="input-group col-md-10 ViewMsgShow">
-                             <span class="input-group-addon">
-                                 <input type="radio" value="0" name="ViewType" checked>
-                             </span>
-                            <input type="text" class="form-control" readonly="readonly"
-                                   value="Public              |   Everyone can see it.">
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-1"></div>
-                        <div class="input-group col-md-10 ViewMsgShow">
-                             <span class="input-group-addon">
-                                 <input type="radio" value="1" name="ViewType">
-                             </span>
-                            <input type="text" class="form-control" readonly="readonly"
-                                   value="Private         　|   Only you can see it.">
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-1"></div>
-                        <div class="input-group col-md-10 ViewMsgShow">
-                             <span class="input-group-addon">
-                                 <input type="radio" value="2" name="ViewType">
-                             </span>
-                            <input type="text" class="form-control" readonly="readonly"
-                                   value="Partial Public   |   Only selected People can see it.">
-
-                            <span class="input-group-addon ShowChoosedGroup"></span>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-1"></div>
-                        <div class="input-group col-md-10 ViewMsgShow">
-                             <span class="input-group-addon">
-                                 <input type="radio" value="3" name="ViewType">
-                             </span>
-                            <input type="text" class="form-control" readonly="readonly"
-                                   value="Block Specific  |   Only selected people cannot see it.">
-                            <span class="input-group-addon ShowNotChoosedGroup" data-toggle="tooltip"
-                                  data-placement="top"></span>
-                        </div>
-                    </div>
-                </div>
             </div>
             <!--Footer-->
             <div class="modal-footer">
                 <button type="button" class="BtnSubmit">Pre</button>
                 <button type="button" class="BtnSubmit">Next</button>
-                <button type="button" class="BtnSubmit Finish">Finish</button>
+                <button type="button" class="BtnSubmit Finish" disabled>Finish</button>
             </div>
         </div>
     </div>
@@ -269,7 +266,6 @@
         <button class="BtnSubmit DimensionAddBtn"><i class="glyphicon glyphicon-plus"></i>Add</button>
     </div>
 
-
     <div class="NewGroup">
         <div class="CloseAddGroup">
             <h4>Add New Group</h4>
@@ -282,12 +278,70 @@
             <i class="glyphicon glyphicon-plus-sign" style="color: lightseagreen;"></i>
         </div>
 
-        <div class="GroupUsers">
+        <!-- <div class="GroupUsers">
+             <ul>
+             </ul>
+         </div>-->
+
+        <button class="BtnSubmit OKUsers"><i class="glyphicon glyphicon-ok"></i> OK</button>
+    </div>
+
+    <div class="AssignUserList">
+        <div class="CloseAssignUserList">
+            <h4>AssignUserList</h4>
+            <i class="glyphicon glyphicon-remove"></i>
+        </div>
+
+        <div class="List">
             <ul>
             </ul>
         </div>
+    </div>
 
-        <button class="BtnSubmit OKUsers"><i class="glyphicon glyphicon-ok"></i> OK</button>
+    <div class="ChooseNav">
+        <div class="CloseCheckBox">
+            <h4>Choose A Group</h4>
+            <i class="glyphicon glyphicon-remove"></i>
+        </div>
+        <hr style="margin: 5px 0 5px 0">
+
+        <div class="ShowGroup">
+        </div>
+        <!--<button class="BtnSubmit NewGroupBtn"><i class="glyphicon glyphicon-plus"></i>New Group.txt</button>-->
+    </div>
+</div>
+<div class="RightContent">
+    <ul>
+    </ul>
+</div>
+
+<div class="modal fade" id="CreateGroup" tabindex="-1" role="dialog" aria-labelledby="CreateGroupLabel"
+     data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close"
+                        data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h2>Create Group</h2>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <input class="form-control" placeholder="* Group Name">
+                    </div>
+                </div>
+                <hr style="margin:25px 0 0 0">
+                <div class="row col-md-12 ChoosedGroupUsers">
+                    <h4>Choosed Users:</h4>
+                    <textarea id="ChoosedGroupUsers" style="display: none;"></textarea>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="BtnSubmit">Create</button>
+            </div>
+        </div>
     </div>
 
     <div class="GroupUserList">
@@ -301,35 +355,6 @@
             </ul>
         </div>
     </div>
-
-    <div class="AssignUserList">
-        <div class="CloseAssignUserList">
-            <h4>AssignUserList</h4>
-            <i class="glyphicon glyphicon-remove"></i>
-        </div>
-
-        <div class="List">
-            <ul>
-            </ul>
-        </div>
-        <!--<button class="BtnSubmit" style="margin-left: 10px;"><i class="glyphicon glyphicon-ok"></i>OK</button>-->
-    </div>
-    <div class="ChooseNav">
-        <div class="CloseCheckBox">
-            <h4>Choose A Group</h4>
-            <i class="glyphicon glyphicon-remove"></i>
-        </div>
-        <hr style="margin: 5px 0 5px 0">
-
-        <div class="ShowGroup">
-        </div>
-        <button class="BtnSubmit NewGroupBtn"><i class="glyphicon glyphicon-plus"></i>New Group</button>
-    </div>
-    <div class="RightContent">
-        <ul>
-        </ul>
-    </div>
-
 </div>
 </body>
 </html>
