New Group and Edit

--- a/Html/KPIManagement.html
+++ b/Html/KPIManagement.html
@@ -316,7 +316,7 @@
 </div>
 
 <div class="modal fade" id="CreateGroup" tabindex="-1" role="dialog" aria-labelledby="CreateGroupLabel"
-     data-backdrop="static" data-keyboard="false">
+     data-backdrop="static" data-keyboard="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -329,7 +329,7 @@
                 <div class="row">
                     <div class="col-md-2"></div>
                     <div class="col-md-8">
-                        <input class="form-control" placeholder="* Group Name">
+                        <input class="form-control CreateGroupName" placeholder="* Group Name">
                     </div>
                 </div>
                 <hr style="margin:25px 0 0 0">
@@ -339,7 +339,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="BtnSubmit">Create</button>
+                <button type="button" class="BtnSubmit CreateGroupBtn">Create</button>
             </div>
         </div>
     </div>
@@ -347,7 +347,7 @@
     <div class="GroupUserList">
         <div class="CloseGroupUserList">
             <h4>GroupUserList</h4>
-            <i class="glyphicon glyphicon-remove"></i>
+            <!--<i class="glyphicon glyphicon-remove"></i>-->
         </div>
 
         <div class="GroupList">
