--- a/Html/KPIManagement.html
+++ b/Html/KPIManagement.html
@@ -6,6 +6,7 @@
     <!-- link start -->
     <link rel="stylesheet" href="../bootstrap-3.3.5-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../css/basic/jquery.tag-editor.css">
+    <link rel="stylesheet" href="../css/basic/bootstrap-select.css">
     <link rel="stylesheet" href="../css/basic/basic.css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/KPIManagement.css">
@@ -15,6 +16,7 @@
     <script src="../js/basic/jquery.tag-editor.js"></script>
     <script src="../js/basic/jquery.tag-editor3parments.js"></script>
     <script src="../bootstrap-3.3.5-dist/js/bootstrap.js"></script>
+    <script src="../js/basic/bootstrap-select.js"></script>
     <script src="../js/basic/basic.js"></script>
     <script src="../js/basic/ajax.js"></script>
     <script src="../js/nav.js"></script>
@@ -37,7 +39,7 @@
         <li><a href="#">Followed</a></li>
         <li><a href="#">User Groups</a></li>
     </ul>
-    <button type="button" class="BtnSubmit Create" data-toggle="modal" data-target="#CreateKpi">Create</button>
+    <button type="button" class="BtnSubmit Create">Create</button>
 </div>
 
 <!--Use BootStrap Modal-->
@@ -73,9 +75,10 @@
                         </div>
 
                         <div class="col-md-6">
-                            <select name="" id="DefaultFrequency" class="SelectCls">
-                                <option value="" disabled selected style="text-align: center;">Default Frequency
-                                </option>
+                            <select id="DefaultFrequency" data-live-search="false"
+                                    class="SelectCls">
+                                <!-- <option value="" disabled selected style="text-align: center;">Default Frequency
+                                 </option>-->
                             </select>
                         </div>
                     </div>
@@ -94,9 +97,9 @@
                     <div class="row">
                         <div class="col-md-6">
                             <select id="uom" class="SelectCls">
-                                <option value="" style="text-align: center" disabled="disabled" selected="selected">Unit
-                                    of measurements
-                                </option>
+                                <!--<option value="" style="text-align: center" disabled="disabled" selected="selected">Unit-->
+                                <!--of measurements-->
+                                <!--</option>-->
                             </select>
                         </div>
 
@@ -112,7 +115,7 @@
 
                         <div class="col-md-6" style="position: absolute;top: 182px;left: 300px">
                             <select id="calculatemethod" class="SelectCls">
-                                <option value="" disabled selected style="text-align: center;">Calculate Method</option>
+                                <!--<option value="" disabled selected style="text-align: center;">Calculate Method</option>-->
                             </select>
                         </div>
                     </div>
@@ -200,7 +203,7 @@
                         </div>
                         <div class="col-md-7">
                             <select id="AssignDepartment" class="SelectCls">
-                                <option value="" disabled selected style="text-align: center;">Department</option>
+                                <!--<option value="" disabled selected style="text-align: center;">Department</option>-->
                             </select>
                         </div>
                     </div>
@@ -211,9 +214,9 @@
                         </div>
                         <div class="col-md-7">
                             <select id="Frequency" class="SelectCls">
-                                <option disabled="disabled" value="" selected="selected" style="text-align: center">
-                                    Frequency
-                                </option>
+                                <!-- <option disabled="disabled" value="" selected="selected" style="text-align: center">
+                                     Frequency
+                                 </option>-->
                             </select>
                         </div>
                     </div>
