--- a/Html/KPIManagement.html
+++ b/Html/KPIManagement.html
@@ -109,7 +109,7 @@
 
                     <div class="row">
                         <div class="col-md-6">
-                            <input type="text" placeholder="* Target Min" class="form-control">
+                            <input type="number" placeholder="* Target Min" class="form-control">
                         </div>
 
                         <div class="col-md-6" style="position: absolute;top: 182px;left: 300px">
@@ -121,7 +121,7 @@
 
                     <div class="row">
                         <div class="col-md-6">
-                            <input type="text" placeholder="* Target Max" class="form-control">
+                            <input type="number" placeholder="* Target Max" class="form-control">
                         </div>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
             </div>
             <!--Footer-->
             <div class="modal-footer">
-                <button type="button" class="BtnSubmit">Pre</button>
+                <button type="button" class="BtnSubmit" disabled style="border: none;">Pre</button>
                 <button type="button" class="BtnSubmit">Next</button>
                 <button type="button" class="BtnSubmit Finish" disabled>Finish</button>
             </div>
