--- a/Html/KPIManagement.html
+++ b/Html/KPIManagement.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/basic/basic.css">
     <link rel="stylesheet" href="../css/nav.css">
     <link rel="stylesheet" href="../css/KPIManagement.css">
+    <link rel="stylesheet" href="../css/managekpi.css"/>
 
     <script src="../js/basic/jquery-latest.js"></script>
     <script src="../js/basic/jquery.cookie.js"></script>
