--- a/Html/ManageKPI.html
+++ b/Html/ManageKPI.html
@@ -12,43 +12,151 @@
             <div class="manualbasicinfo">
                 <h4>Basic Information (* is required)</h4>
 
-                <div class="manualbasicinfocontent">
-                    <div class="col-md-12">
-                        <div class="col-md-6">
-                            <h4>Name:</h4>
-                            <input type="text" class="form-control"/>
-                        </div>
-
-                        <div class="col-md-6">
-                            <h4>Description:</h4>
-                            <input type="text" class="form-control"/>
-                        </div>
+                <div class="manualcontent">
+                    <div class="col-md-6 NameAndInput">
+                        <h4>Name:</h4>
+                        <input type="text" class="form-control"/>
                     </div>
 
-                    <div class="col-md-12">
-                        <div class="col-md-6">
-                            <h4>unit of measurement:</h4>
-                            <select class="SelectCls" name="" id="uom">
-                                <option value="0">1234</option>
-                                <option value="0">12.34</option>
-                                <option value="0">12%</option>
-                                <option value="0">12.34%</option>
-                            </select>
-                        </div>
+                    <div class="col-md-6 NameAndInput">
+                        <h4>Description:</h4>
+                        <input type="text" class="form-control"/>
+                    </div>
 
-                        <div class="col-md-6">
-                            <h4>Calculate Method:</h4>
-                            <select class="SelectCls" name="" id="calculatemethod">
-                                <option value="0">1234</option>
-                                <option value="0">12.34</option>
-                                <option value="0">12%</option>
-                                <option value="0">12.34%</option>
-                            </select>
-                        </div>
+                    <div class="col-md-6 NameAndInput">
+                        <h4>Target Min:</h4>
+                        <input type="number" class="form-control"/>
+                    </div>
+
+                    <div class="col-md-6 NameAndInput">
+                        <h4>Target Max:</h4>
+                        <input type="number" class="form-control"/>
+                    </div>
+
+                    <div class="col-md-6 NameAndInput">
+                        <h4>Unit of measurement:</h4>
+                        <select class="SelectCls" name="" id="uom">
+                            <option value="0">1234</option>
+                            <option value="0">12.34</option>
+                            <option value="0">12%</option>
+                            <option value="0">12.34%</option>
+                        </select>
+                    </div>
+
+                    <div class="col-md-6 NameAndInput">
+                        <h4>Calculate Method:</h4>
+                        <select class="SelectCls" name="" id="calculatemethod">
+                            <option value="0">1234</option>
+                            <option value="0">12.34</option>
+                            <option value="0">12%</option>
+                            <option value="0">12.34%</option>
+                        </select>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="manualdimensions">
+            <h4>Dimensions</h4>
+            <hr/>
+            <textarea name="" id="manualdimensions" cols="34" style="display: none;"></textarea>
+        </div>
+
+        <div class="panel-body">
+            <div class="manualassign">
+                <h4>Assign To Who</h4>
+                <hr/>
+
+                <div class="container">
+                    <div class="AssignToWho col-md-3">
+                        <div class="AssignInfo col-md-10">
+                            <h4>Assign To <strong>TianyiShen</strong></h4>
+                            <h4>18:00 Every Day</h4>
+                            <h4>For Department : Station-1For Department : Station-1</h4>
+                        </div>
+
+                        <button class="DeleteBtn">Delete</button>
+                    </div>
+
+                    <div class="AssignToWho col-md-3">
+                        <div class="AssignInfo col-md-10">
+                            <h4>Assign To <strong>TianyiShen</strong></h4>
+                            <h4>18:00 Every Day</h4>
+                            <h4>For Department : Station-1For Department : Station-1</h4>
+                        </div>
+
+                        <button class="DeleteBtn">Delete</button>
+                    </div>
+
+                    <div class="AssignToWho col-md-3">
+                        <div class="AssignInfo col-md-10">
+                            <h4>Assign To <strong>TianyiShen</strong></h4>
+                            <h4>18:00 Every Day</h4>
+                            <h4>For Department : Station-1For Department : Station-1</h4>
+                        </div>
+
+                        <button class="DeleteBtn">Delete</button>
+                    </div>
+
+                    <div class="AssignToWho col-md-3">
+                        <div class="AssignInfo col-md-10">
+                            <h4>Assign To <strong>TianyiShen</strong></h4>
+                            <h4>18:00 Every Day</h4>
+                            <h4>For Department : Station-1For Department : Station-1</h4>
+                        </div>
+
+                        <button class="DeleteBtn">Delete</button>
+                    </div>
+
+                    <div class="AssignToWho col-md-3">
+                        <div class="AssignInfo col-md-10">
+                            <h4>Assign To <strong>TianyiShen</strong></h4>
+                            <h4>18:00 Every Day</h4>
+                            <h4>For Department : Station-1For Department : Station-1</h4>
+                        </div>
+
+                        <button class="DeleteBtn">Delete</button>
+                    </div>
+
+                    <div class="AssignToWho col-md-3">
+                        <div class="AssignInfo col-md-10">
+                            <h4>Assign To <strong>TianyiShen</strong></h4>
+                            <h4>18:00 Every Day</h4>
+                            <h4>For Department : Station-1For Department : Station-1</h4>
+                        </div>
+
+                        <button class="DeleteBtn">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="panel-body">
+            <div class="manualviewable">
+                <h4>Viewable</h4>
+                <hr/>
+
+                <div class="col-md-5">
+                    <div class="input-group">
+                            <span class="input-group-addon">
+                                <input type="radio"/>
+                            </span>
+                        <input type="text" class="form-control"/>
+                    </div>
+                </div>
+
+                <div class="col-md-5">
+                    <div class="input-group">
+                            <span class="input-group-addon">
+                                <input type="radio"/>
+                            </span>
+                        <input type="text" class="form-control"/>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 </div>
 </body>
