--- a/Html/ManageKPI.html
+++ b/Html/ManageKPI.html
@@ -10,7 +10,7 @@
         <div class="panel-heading"></div>
         <div class="panel-body">
             <div class="manualbasicinfo">
-                <h4>Basic Information (* is required)</h4>
+                <h4>Basic Information</h4>
 
                 <div class="manualcontent">
                     <div class="col-md-6 NameAndInput">
