fixed Repeat elements style

--- a/Html/ManageKPI.html
+++ b/Html/ManageKPI.html
@@ -68,7 +68,7 @@
                 <hr/>
 
                 <div class="container">
-                    <div class="AssignToWho col-md-3">
+                    <div class="ManualAssignToWho col-md-3">
                         <div class="AssignInfo col-md-10">
                             <h4>Assign To <strong>TianyiShen</strong></h4>
                             <h4>18:00 Every Day</h4>
@@ -78,7 +78,7 @@
                         <button class="DeleteBtn">Delete</button>
                     </div>
 
-                    <div class="AssignToWho col-md-3">
+                    <div class="ManualAssignToWho col-md-3">
                         <div class="AssignInfo col-md-10">
                             <h4>Assign To <strong>TianyiShen</strong></h4>
                             <h4>18:00 Every Day</h4>
@@ -88,7 +88,7 @@
                         <button class="DeleteBtn">Delete</button>
                     </div>
 
-                    <div class="AssignToWho col-md-3">
+                    <div class="ManualAssignToWho col-md-3">
                         <div class="AssignInfo col-md-10">
                             <h4>Assign To <strong>TianyiShen</strong></h4>
                             <h4>18:00 Every Day</h4>
@@ -98,7 +98,7 @@
                         <button class="DeleteBtn">Delete</button>
                     </div>
 
-                    <div class="AssignToWho col-md-3">
+                    <div class="ManualAssignToWho col-md-3">
                         <div class="AssignInfo col-md-10">
                             <h4>Assign To <strong>TianyiShen</strong></h4>
                             <h4>18:00 Every Day</h4>
@@ -108,7 +108,7 @@
                         <button class="DeleteBtn">Delete</button>
                     </div>
 
-                    <div class="AssignToWho col-md-3">
+                    <div class="ManualAssignToWho col-md-3">
                         <div class="AssignInfo col-md-10">
                             <h4>Assign To <strong>TianyiShen</strong></h4>
                             <h4>18:00 Every Day</h4>
@@ -118,7 +118,7 @@
                         <button class="DeleteBtn">Delete</button>
                     </div>
 
-                    <div class="AssignToWho col-md-3">
+                    <div class="ManualAssignToWho col-md-3">
                         <div class="AssignInfo col-md-10">
                             <h4>Assign To <strong>TianyiShen</strong></h4>
                             <h4>18:00 Every Day</h4>
